Many new Scan sub-entities.  Some refactoring of NessusResponse